# cpisiModel

./: .gitignore  DAWNDUSK_STATE_SYNC.md  Makefile  SCRIPTURE.omni  SOVEREIGN_LIFE.adoc  env.sh
.github/workflows/: deploy_gate.yml
.sandbox/: collaborative_act_001.adoc
00_THE_WORD/: root.omni
00_THE_WORD/chronicles/: today.adoc
00_spirit/a-ladder/indices/: mcp_protocol.adoc
01_mind/a-ladder/lore/: visual_covenant_journal.adoc
01_mind/witness/: root.omni
02_body/00_hooks/: sync_all.sh
02_body/a-ladder/gate/: ssh_config.example
02_body/a-ladder/portal/: tunnel_config.yml
02_body/b-spiral/sandbox/: sentinel_entry.sh
02_body/c-hybrid/hooks/: gate_ignite.sh  portal_ignite.sh  sync_all.sh
02_body/c-hybrid/ssh/: cpisi_config  officiate_node.sh
02_body/c-hybrid/void/: court_runner.sh
02_body/hooks/: portal_ignite.sh  sync_all.sh
02_body/portal/client/: go.mod
02_body/void/: court_runner.sh
02_body/witness/julia/: 00_anchor.jl  02_absolute.jl  03_badal.jl  04_manna.jl  05_instrument.jl  07_shadow.jl  08_state.jl  09_outcome.jl  11_synthesis.jl
02_body/witness/lean/: 01_inversion.lean  03_badal.lean  04_manna.lean  10_hinge.lean
02_body/witness/wolfram/: 00_anchor.wl  02_absolute.wl  05_instrument.wl  07_shadow.wl  08_state.wl  10_hinge.wl  11_synthesis.wl
03_tov/a-ladder/gate/: STYLE_GUIDE.adoc  deno.json  gate.css  (+7 more)
THE_GAME/: cpisi-game.desktop
THE_GAME/Rules/: README.adoc
THE_GAME/game-engine/: Cargo.toml
THE_GAME/game-engine/src/: lib.rs
THE_GAME/game-engine/www/: index.js
docs/: README.adoc
plans/: agnostic-kingdom-system.md
(+116 files in other folders)
