[package]
name = "game-engine"
version = "0.1.0"
edition = "2024"

# [BLOCK:ROOT] THE BODY: THE GAME ENGINE (WASM/NATIVE)
# #omni:key B-game-engine-manifest

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The WASM Bridge
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d"] }

# The Core Logic (Linking to libtrit soon)
# [TODO: Link to 02_body/engine/Rust-core]

[profile.release]
# Optimize for the Small Step (WASM size)
opt-level = "s"
lto = true
